# HPC101

docs/lab/Lab5-TinyLLM/: index.md
src/lab4/: CMakeLists.txt  compile.sh  run.sh
src/lab4/src/: main.cpp
src/lab4/src/bicgstab/: solver.c
src/lab5/modules/: attention.py  mlp.py
